--- a/pages/subpages/home/theme/lake-trip/index.wxml
+++ b/pages/subpages/home/theme/lake-trip/index.wxml
@@ -3,15 +3,15 @@
 </view>
 
 <view class="header">
-  <image class="bg" src="https://static.tiddler.cn/mp/trip_type/lake_trip/bg.png" />
-  <image class="title" src="https://static.tiddler.cn/mp/trip_type/lake_trip/title.png" />
+  <image class="bg" src="https://static.tiddler.cn/mp/trip_type/lake_trip/bg.webp" />
+  <image class="title" src="https://static.tiddler.cn/mp/trip_type/lake_trip/title.webp" />
 </view>
 
 <view class="content">
   <image class="sub-title" src="https://static.tiddler.cn/mp/trip_type/lake_trip/sub_title_1.png" />
   <view class="island-list">
     <view class="island-item" wx:for="{{centerLakeList}}" wx:key="index" bindtap="checkScenic" data-id="{{item.scenicId}}">
-      <image class="island-cover" src="{{item.scenicCover}}" mode="aspectFill" />
+      <image class="island-cover" src="{{item.scenicCover}}?x-oss-process=image/format,webp" mode="aspectFill" />
       <view class="island-name-wrap">
         <view class="island-name">千岛湖中心湖区 {{item.scenicName}}</view>
         <view class="island-desc">{{item.desc}}</view>
