--- a/pages/subpages/home/theme/lake-cycle/index.wxss
+++ b/pages/subpages/home/theme/lake-cycle/index.wxss
@@ -1,6 +1,6 @@
 page {
   background-color: #b9c6e6;
-  background-image: url("https://static.tiddler.cn/mp/trip_type/lake_cycle/bg.png");
+  background-image: url("https://static.tiddler.cn/mp/trip_type/lake_cycle/bg.webp");
   background-size: 100% 2393rpx;
   background-repeat: no-repeat;
 }
