--- a/components/hotel-item-strip/index.wxss
+++ b/components/hotel-item-strip/index.wxss
@@ -11,10 +11,10 @@
   align-items: center;
   padding: 24rpx 0;
   font-size: 0;
-  border-bottom: 1px solid #f5f6f8;
+  border-bottom: 1px solid #f5f6fa;
 }
 .hotel-item.show-border {
-  border-bottom: 1px solid #f5f6f8;
+  border-bottom: 1px solid #f5f6fa;
 }
 
 .cover {
