--- a/pages/subpages/mine/balance/index.wxss
+++ b/pages/subpages/mine/balance/index.wxss
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   padding: 32rpx;
-  background: #f5f6f8;
+  background: #f5f6fa;
   border-radius: 48rpx 48rpx 0 0;
 }
 .change-log-title {
