--- a/pages/subpages/mine/history/index.wxss
+++ b/pages/subpages/mine/history/index.wxss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 88rpx;
   background: #fff;
-  border-top: 1px solid #f5f6f8;
+  border-top: 1px solid #f5f6fa;
 }
 .menu-item {
   position: relative;
