--- a/pages/subpages/mine/invite-merchant/index.wxss
+++ b/pages/subpages/mine/invite-merchant/index.wxss
@@ -58,7 +58,7 @@
 .container {
   margin-top: -48rpx;
   min-height: calc(100vh - 500rpx);
-  background: #f5f6f8;
+  background: #f5f6fa;
   border-radius: 32rpx 32rpx 0 0;
 }
 
