--- a/pages/subpages/mine/merchant/subpages/scenic-order/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/index.wxss
@@ -42,7 +42,7 @@
   width: 100%;
   height: 44px;
   background: #fff;
-  border-top: 1px solid #f5f6f8;
+  border-top: 1px solid #f5f6fa;
 }
 .menu-item {
   position: relative;
