--- a/pages/subpages/mine/order/components/scenic-order-item/index.wxss
+++ b/pages/subpages/mine/order/components/scenic-order-item/index.wxss
@@ -30,7 +30,7 @@
   height: 50rpx;
   color: #666;
   font-size: 22rpx;
-  background: #f5f6f8;
+  background: #f5f6fa;
   border-radius: 25rpx;
 }
 .alarm-icon {
