--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
@@ -13,7 +13,7 @@
   width: 120rpx;
   height: 120rpx;
   border-radius: 50%;
-  background: #f5f6f8;
+  background: #f5f6fa;
 }
 .info {
   margin-left: 16rpx;
