--- a/pages/subpages/mine/invite-merchant/subpages/settle-home/index.wxml
+++ b/pages/subpages/mine/invite-merchant/subpages/settle-home/index.wxml
@@ -21,5 +21,19 @@
       <view>选择商家类型</view>
       <image class="title-decoration" src="https://static.tiddler.cn/mp/merchant/settle/title_decoration_right.webp" />
     </view>
+    <view class="type-selections">
+      <view 
+        class="type-selection {{curMerchantType === index + 1 ? 'active' : ''}}" 
+        wx:for="{{merchantTypeList}}" 
+        wx:key="index"
+        bindtap="selectMerchantType"
+        data-index="{{index}}"
+      >
+        <view class="merchant-icon-wrap">
+          <image class="merchant-icon" src="https://static.tiddler.cn/mp/merchant/settle/{{item.icon}}_merchant.webp" />
+        </view>
+        <view class="merchant-type-name">{{item.name}}</view>
+      </view>
+    </view>
   </view>
 </view>
