--- a/pages/subpages/mine/setting/subpages/merchant-settle/index.wxss
+++ b/pages/subpages/mine/setting/subpages/merchant-settle/index.wxss
@@ -25,9 +25,10 @@
 
 .container {
   position: relative;
+  padding: 0 24rpx;
   height: 100vh;
   background: linear-gradient(180deg, rgba(245, 246, 250, 0) 800rpx, rgba(245, 246, 250, 100%) 1000rpx, rgba(245, 246, 250, 100%) 100%);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .container::before {
   position: absolute;
@@ -92,7 +93,7 @@
 }
 
 .merchant-type-selection {
-  margin: 240rpx 24rpx 0;
+  margin-top: 240rpx;
   padding: 24rpx;
   background: #fff;
   border-radius: 32rpx;
@@ -108,14 +109,14 @@
   height: 16rpx;
 }
 
-.type-selections {
+.type-options {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 12rpx;
   margin-top: 24rpx;
   background: radial-gradient(circle at center, #f9f9fa 0%, #fefefe 40%, #fff 100%);
 }
-.type-selection {
+.type-option {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,7 +126,7 @@
   background: #fff;
   border-radius: 24rpx;
 }
-.type-selection.active {
+.type-option.active {
   box-shadow: 0 4px 20px #f0f0f0;
   transition: box-shadow .2s ease;
 }
@@ -143,7 +144,7 @@
   height: 60rpx;
 }
 .merchant-type-name {
-  margin-top: 12rpx;
+  margin-top: 18rpx;
   color: #999;
   font-size: 28rpx;
 }
