--- a/pages/subpages/mine/setting/subpages/merchant-settle/index.wxss
+++ b/pages/subpages/mine/setting/subpages/merchant-settle/index.wxss
@@ -26,9 +26,7 @@
 .container {
   position: relative;
   padding: 0 24rpx;
-  height: 100vh;
   background: linear-gradient(180deg, rgba(245, 246, 250, 0) 800rpx, rgba(245, 246, 250, 100%) 1000rpx, rgba(245, 246, 250, 100%) 100%);
-  /* overflow: hidden; */
 }
 .container::before {
   position: absolute;
@@ -64,7 +62,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-top: 18rpx;
+  margin: 18rpx 0 240rpx;
   width: 620rpx;
   height: 80rpx;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0) 100%);
@@ -92,13 +90,13 @@
   100% { opacity: 0; transform: translateY(-100%) scale(0.8);}
 }
 
-.merchant-type-selection {
-  margin-top: 240rpx;
+.card {
+  margin-top: 24rpx;
   padding: 24rpx;
   background: #fff;
   border-radius: 32rpx;
 }
-.selection-title {
+.card-title {
   color: #333;
   font-size: 32rpx;
   font-weight: bold;
@@ -148,9 +146,109 @@
   color: #999;
   font-size: 28rpx;
 }
-.type-selection.active > .merchant-type-name {
+.merchant-type-name.active {
   color: #333;
   font-weight: bold;
   transition: .2s ease;
 }
 
+.shop-type-selection {
+  margin-top: 48rpx;
+}
+.shop-type-selection-tips {
+  color: #666;
+  font-size: 26rpx;
+  text-align: center;
+}
+.shop-type-option {
+  display: flex;
+  align-items: center;
+  margin-top: 24rpx;
+  padding: 0 40rpx;
+  height: 240rpx;
+  background: #f5f9ff;
+  border-radius: 32rpx;
+}
+.shop-type-option.active {
+  background-image: url("https://static.tiddler.cn/mp/merchant/settle/option_selected_bg.webp");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+.shop-type-name-wrap {
+  margin-right: 40rpx;
+  flex: 1;
+}
+.shop-type-name {
+  color: #141925;
+  font-size: 32rpx;
+  font-weight: 550;
+}
+.shop-type-desc {
+  margin-top: 12rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.shop-type-illus {
+  width: 180rpx;
+  height: 180rpx;
+}
+
+.course {
+  margin-top: 32rpx;
+}
+.course-step {
+  display: flex;
+  align-items: center;
+  color: #141925;
+  font-size: 32rpx;
+  font-weight: bold;
+}
+.course-step-index {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20rpx;
+  width: 36rpx;
+  height: 36rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: linear-gradient(135deg, #76dcff 0%, #05a8ff 100%);
+  border-radius: 50%;
+}
+.course-content {
+  margin: 8rpx 0 48rpx;
+  padding-left: 56rpx;
+}
+.course-desc {
+  color: #999;
+  font-size: 26rpx;
+}
+.material-list {
+  margin-top: 48rpx;
+}
+.material-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: #f5f6fa;
+  border-radius: 24rpx;
+}
+.material-info {
+  flex: 1;
+}
+.material-name {
+  color: #333;
+  font-size: 28rpx;
+  font-weight: bold;
+}
+.material-desc {
+  margin-top: 8rpx;
+  color: #999;
+  font-size: 26rpx;
+}
+.material-illus {
+  width: 150rpx;
+  height: 100rpx;
+  border-radius: 8rpx;
+}
