--- a/pages/subpages/mine/setting/subpages/invite-merchant/index.wxss
+++ b/pages/subpages/mine/setting/subpages/invite-merchant/index.wxss
@@ -4,11 +4,11 @@
   left: 0;
   width: 100%;
   z-index: 100;
-  transition: .2s ease;
+  transition: 0.2s ease;
 }
 .header.show {
   background: linear-gradient(180deg, #fa90bf 0%, #fff 100%);
-  transition: .2s ease;
+  transition: 0.2s ease;
 }
 .nav-bar {
   padding-left: 8px;
@@ -26,11 +26,12 @@
   font-size: 26rpx;
   font-weight: bold;
   border-radius: 16px;
-  background: rgba(0, 0, 0, 0.3);
-  border: 0.5px solid rgba(255,255,255,0.3);
+  background: rgba(0, 0, 0, 0.2);
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
 }
 
-.guide-btn, .share-btn {
+.guide-btn,
+.share-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,8 +39,8 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  background: rgba(0, 0, 0, 0.3);
-  border: 0.5px solid rgba(255,255,255,0.3);
+  background: rgba(0, 0, 0, 0.2);
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
 }
 .guide-icon {
   width: 18px;
