--- a/pages/subpages/home/media/live/components/anchor-capsule/index.wxss
+++ b/pages/subpages/home/media/live/components/anchor-capsule/index.wxss
@@ -4,8 +4,8 @@
   max-width: 150px;
   height: 32px;
   border-radius: 16px;
-  background-color: rgba(0, 0, 0, 0.3);
-  border: 0.5px solid rgba(255,255,255,0.3);
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
 }
 
 .anchor-avatar {
@@ -35,5 +35,5 @@
   color: #fff;
   font-size: 11px;
   border-radius: 13px;
-  background: #EE3769;
+  background: #ee3769;
 }
