--- a/pages/subpages/mine/setting/subpages/merchant-settle/index.wxml
+++ b/pages/subpages/mine/setting/subpages/merchant-settle/index.wxml
@@ -1,7 +1,7 @@
 <view class="header {{headerVisible ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="nav-bar row">
     <back-icon />
-    <view class="title">商家入驻</view>
+    <view class="title">{{merchantTypeList[merchantType - 1].name}}入驻</view>
   </view>
 </view>
 
@@ -145,6 +145,6 @@
   <view class="agreement-tips row" bindtap="toggleAgree">
     <image class="checkbox" src="https://static.tiddler.cn/mp/register/select{{agree ? 'ed' : ''}}.png" />
     <text>阅读并同意</text>
-    <text style="color: #09AFFF;" catchtap="checkAgreement">《小鱼游{{['景区', '酒店', '餐饮', '电商'][merchantType - 1]}}商家服务协议》</text>
+    <text style="color: #09AFFF;" catchtap="checkAgreement">《小鱼游{{merchantTypeList[merchantType - 1].name}}服务协议》</text>
   </view>
 </view>
