--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -4,7 +4,7 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <!-- <image class="sign-in-icon" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
   <view class="promoter-icon" wx:if="{{!userInfo.promoterInfo && superiorInfo}}">
-    <image class="promoter-avatar" src="{{superiorInfo.avatar}}" />
+    <image class="promoter-avatar" src="{{superiorInfo.avatar ? (superiorInfo.avatar + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
     <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{superiorInfo.promoterInfo.level}}/medal.gif" />
   </view>
   <view class="search-bar {{navBarActive ? 'active': ''}}" bindtap="search">
