--- a/pages/tab-bar-pages/home/index.skeleton.wxss
+++ b/pages/tab-bar-pages/home/index.skeleton.wxss
@@ -1,94 +1,20 @@
-.sk-transparent {
-    color: transparent !important;
-  }
-.sk-text-14-2857-925 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 36.6279rpx;
-    position: relative !important;
-  }
-.sk-text {
-    background-origin: content-box !important;
-    background-clip: content-box !important;
-    background-color: transparent !important;
-    color: transparent !important;
-    background-repeat: repeat-y !important;
-  }
-.sk-text-14-2857-901 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 43.9535rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-720 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-96 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-191 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-759 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-98 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-414 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-616 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-723 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-595 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-291 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-image {
-    background: #EFEFEF !important;
-  }
-.sk-pseudo::before, .sk-pseudo::after {
-      background: #EFEFEF !important;
-      background-image: none !important;
-      color: transparent !important;
-      border-color: transparent !important;
-    }
-.sk-pseudo-rect::before, .sk-pseudo-rect::after {
-      border-radius: 0 !important;
-    }
-.sk-pseudo-circle::before, .sk-pseudo-circle::after {
-      border-radius: 50% !important;
-    }
 .sk-container {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: transparent;
+  padding: 0 20rpx;
+  background: #fff;
+}
+
+.sk-banner {
+  margin-top: 145;
+  height: 200rpx;
+  border-radius: 40rpx;
+}
+
+.sk-animate {
+  background: #f2f3f5;
+  animation: blink 1.2s ease-in-out infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 0.6;
   }
+}
