--- a/pages/tab-bar-pages/mall/index.skeleton.wxss
+++ b/pages/tab-bar-pages/mall/index.skeleton.wxss
@@ -1,155 +1,17 @@
-.sk-transparent {
-    color: transparent !important;
-  }
-.sk-text-14-2857-102 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 31.7442rpx;
-    position: relative !important;
-  }
-.sk-text {
-    background-origin: content-box !important;
-    background-clip: content-box !important;
-    background-color: transparent !important;
-    color: transparent !important;
-    background-repeat: repeat-y !important;
-  }
-.sk-text-14-2857-700 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-883 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-986 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-787 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-656 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-text-14-2857-973 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-243 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-opacity {
-    opacity: 0 !important;
-  }
-.sk-text-0-0000-41 {
-    background-image: linear-gradient(transparent 0.0000%, #EEEEEE 0%, #EEEEEE 100.0000%, transparent 0%) !important;
-    background-size: 100% 31.3953rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-95 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 29.3023rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-286 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-text-14-2857-819 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-241 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-text-0-0000-918 {
-    background-image: linear-gradient(transparent 0.0000%, #EEEEEE 0%, #EEEEEE 100.0000%, transparent 0%) !important;
-    background-size: 100% 31.3953rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-183 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 29.3023rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-490 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-text-14-2857-74 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-text-14-2857-244 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-881 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-text-0-0000-597 {
-    background-image: linear-gradient(transparent 0.0000%, #EEEEEE 0%, #EEEEEE 100.0000%, transparent 0%) !important;
-    background-size: 100% 31.3953rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-329 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 29.3023rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-648 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-text-14-2857-575 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 26.8605rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-395 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 34.1860rpx;
-    position: relative !important;
-  }
-.sk-text-0-0000-917 {
-    background-image: linear-gradient(transparent 0.0000%, #EEEEEE 0%, #EEEEEE 100.0000%, transparent 0%) !important;
-    background-size: 100% 31.3953rpx;
-    position: relative !important;
-  }
-.sk-text-14-2857-710 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 24.4186rpx;
-    position: absolute !important;
-  }
-.sk-image {
-    background: #EFEFEF !important;
-  }
 .sk-container {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: transparent;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.sk-animate {
+  background: #f2f3f5;
+  animation: blink 1.2s ease-in-out infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 0.6;
   }
+}
