--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
@@ -422,10 +422,10 @@
   margin: 24rpx 0;
   width: 160rpx;
   height: 58rpx;
-  color: var(--gold-1);
+  color: #fff;
   font-size: 26rpx;
   font-weight: bold;
-  background: var(--blue-linear-2);
+  background: linear-gradient(90deg, #009bff 0, #0073ff 100%);
   border-radius: 18rpx;
 }
 
